tests/expectations/compiler/structs/cyclic_structs_two_fail.out
Error [ETYC0372058]: Cyclic dependency between composites: `test.aleo/Bar` --> `test.aleo/Baz` --> `test.aleo/Bar`
Error [ETYC0372083]: A program must have at least one entry point fn.
    --> compiler-test:9:9
     |
   9 | program test.aleo {}
     |         ^^^^^^^^^
